--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -330,7 +330,7 @@
                 <div class="equipment-info-container">{{{data.data.info}}}</div>
             </div>
             <div class="tab">
-                <table>
+                <table class="material-catalogue-table">
                     <tr class="design-row">
                         <td class="question-container">
                             Name
@@ -375,13 +375,13 @@
                     {{#ifCond ../data.data.tl '>=' material.tl}}
                     <tr class="design-row">
                         <td>{{material.name}}</td>
-                        <td>{{material.densityLbsCuIn}}</td>
-                        <td>{{material.tensileStPsi}}</td>
-                        <td>{{material.elasticModulusPsi}}</td>
+                        <td style="text-align: right">{{material.densityLbsCuIn}}</td>
+                        <td style="text-align: right">{{material.tensileStPsi}}</td>
+                        <td style="text-align: right">{{material.elasticModulusPsi}}</td>
                         <td style="{{{calcMaxStrainStyle material.tensileStPsi material.elasticModulusPsi}}}">{{calcMaxStrain material.tensileStPsi material.elasticModulusPsi}}</td>
                         <td style="{{{bucklingConstantStyle material.a}}}">{{material.a}}</td>
-                        <td>{{calcBowCost material.tensileStPsi material.elasticModulusPsi densityLbsCuIn}}</td>
-                        <td>{{calcArrowCost material.elasticModulusPsi densityLbsCuIn}}</td>
+                        <td style="text-align: right">{{calcBowCost material.tensileStPsi material.elasticModulusPsi densityLbsCuIn}}</td>
+                        <td style="text-align: right">{{calcArrowCost material.elasticModulusPsi densityLbsCuIn}}</td>
                     </tr>
                     {{/ifCond}}
                     {{/each}}
