#53 Bow thickness and deflection math.

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -411,7 +411,7 @@
                                     Minimum Thickness
                                 </td>
                                 <td>
-                                    {{data.data.bowDesign.limbMinThickness}}
+                                    {{data.data.bowDesign.limbMinThickness}} in
                                 </td>
                             </tr>
 
@@ -420,7 +420,7 @@
                                     Deflection
                                 </td>
                                 <td>
-                                    {{data.data.bowDesign.deflection}}
+                                    {{data.data.bowDesign.deflection}} %
                                 </td>
                             </tr>
                         </table>
