#53 Added input and hint for compound bow loops.

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -394,6 +394,20 @@
 
                             <tr class="design-row">
                                 <td style="width: 150px">
+                                    String Loops / Pulleys
+                                </td>
+                                <td>
+                                    <input type="number" name="data.bowDesign.loops" value="{{data.data.bowDesign.loops}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="bow-loops">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="width: 150px">
                                     Thickness
                                 </td>
                                 <td>
